--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "openai": "^6.16.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "stripe": "^20.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
