--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "express": "^5.2.1",
     "openai": "^6.16.0",
     "pg": "^8.16.3",
-    "stripe": "^20.2.0"
+    "stripe": "^20.2.0",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -32,7 +33,6 @@
     "nodemon": "^3.1.11",
     "prisma": "^7.2.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
